library/src/libqtreeview.h

typedef struct QItemSelection QItemSelection;
typedef struct QModelIndex QModelIndex;
typedef struct QSize QSize;
typedef struct QTreeView QTreeView;
void QTreeView_UpdateGeometries(QTreeView* self);
QSize* QTreeView_ViewportSizeHint(const QTreeView* self);
int QTreeView_SizeHintForColumn(const QTreeView* self, int column);
void QTreeView_HorizontalScrollbarAction(QTreeView* self, int action);
bool QTreeView_IsIndexHidden(const QTreeView* self, QModelIndex* index);
void QTreeView_SelectionChanged(QTreeView* self, QItemSelection* selected, QItemSelection* deselected);
void QTreeView_CurrentChanged(QTreeView* self, QModelIndex* current, QModelIndex* previous);
libqt_string QTreeView_Tr2(const char* s, const char* c);
libqt_string QTreeView_Tr3(const char* s, const char* c, int n);
void QTreeView_ExpandRecursively2(QTreeView* self, QModelIndex* index, int depth);
int QTreeView_IndexRowSizeHint(const QTreeView* self, QModelIndex* index);
int QTreeView_RowHeight(const QTreeView* self, QModelIndex* index);