src/libqtreeview.bf

	[LinkName("QTreeView_UpdateGeometries")]
	public static extern void QTreeView_UpdateGeometries(void* c_this);
	[LinkName("QTreeView_ViewportSizeHint")]
	public static extern QSize QTreeView_ViewportSizeHint(void* c_this);
	[LinkName("QTreeView_SizeHintForColumn")]
	public static extern int32 QTreeView_SizeHintForColumn(void* c_this, int32 column);
	[LinkName("QTreeView_IndexRowSizeHint")]
	public static extern int32 QTreeView_IndexRowSizeHint(void* c_this, QModelIndex index);
	[LinkName("QTreeView_RowHeight")]
	public static extern int32 QTreeView_RowHeight(void* c_this, QModelIndex index);
	[LinkName("QTreeView_HorizontalScrollbarAction")]
	public static extern void QTreeView_HorizontalScrollbarAction(void* c_this, int32 action);
	[LinkName("QTreeView_IsIndexHidden")]
	public static extern bool QTreeView_IsIndexHidden(void* c_this, QModelIndex index);
	[LinkName("QTreeView_SelectionChanged")]
	public static extern void QTreeView_SelectionChanged(void* c_this, QItemSelection selected, QItemSelection deselected);
	[LinkName("QTreeView_CurrentChanged")]
	public static extern void QTreeView_CurrentChanged(void* c_this, QModelIndex current, QModelIndex previous);
	[LinkName("QTreeView_Tr2")]
	public static extern char8[] QTreeView_Tr2(char8[] s, char8[] c);
	[LinkName("QTreeView_Tr3")]
	public static extern char8[] QTreeView_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QTreeView_ExpandRecursively2")]
	public static extern void QTreeView_ExpandRecursively2(void* c_this, QModelIndex index, int32 depth);
}